--- a/learning_logs/templates/learning_logs/new-entry.html
+++ b/learning_logs/templates/learning_logs/new-entry.html
@@ -1,8 +1,11 @@
 {% extends "learning_logs/base.html" %}
 
 {%block content%}
-    <p>Adicione um novo tópico: </p>
-    <form action="{% url 'new-topic' %}" method="post">
+    <p><a href="{% url 'topic' topic.id %}">{{ topic }}</a></p>
+
+    <p>Adicione uma nova entrada:</p>
+
+    <form action="{% url 'new-entry' topic.id %}" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button name="submit">Adicionar</button>
