--- a/learning_logs/templates/learning_logs/topic.html
+++ b/learning_logs/templates/learning_logs/topic.html
@@ -1,22 +1,30 @@
 {% extends "learning_logs/base.html" %}
 
-{%block content%}
-    <p>Tópicos: {{ topic }}</p>
-    <p>Anotações:</p>
-    <p><a href="{% url 'new-entry' topic.id %}">Adicione uma nova anotação</a></p>
+{% block header %}
+    <h2>{{ topic }}</h2>
+{% endblock header %}
+
+{% block content %}
     <p>
-        <ul>
+        <a href="{% url 'new-entry' topic.id %}">Adicione uma nova anotação</a>
+    </p>    
+        
             {% for entry in entries %}
-                <li>
-                    <p>{{ entry.date_added | date:'M d, Y H:i' }}</p>
-                    <p>{{ entry.text | linebreaks }}</p>
-                    <p>
-                        <a href="{% url 'edit-entry' entry.id %}">Editar anotação</a>
-                    </p>
-                </li>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3>
+                            {{ entry.date_added | date:'M d, Y H:i' }}
+                            <small>
+                                <a href="{% url 'edit-entry' entry.id %}">Editar anotação</a>
+                            </small>
+                        </h3>
+                    </div>
+                    <div class="panel-body">
+                        {{ entry.text | linebreaks }}
+                    </div>
+                </div>
             {% empty %}
-                <li>Não há registro.</li>
+                Não há registro.
             {% endfor %}
-        </ul>
-    </p>
-{%endblock content%}
+            
+{% endblock content %}
