--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,17 +1,23 @@
 {% extends "learning_logs/base.html" %}
 
-{%block content%}
-    <h3>Tópicos:</h3>
+{% block header %}
+    <h1>Tópicos:</h1>
+{% endblock header %}
+
+{% block content %}
     <ul>
         {% for topic in topics %}
             <li>
-                <a href="{% url 'topic' topic.id %}">{{ topic }}</a>
+                <h3>
+                    <a href="{% url 'topic' topic.id %}">{{ topic }}</a>
+                </h3>
             </li>
         {% empty %}
             <li>Não há tópicos adicionados.</li>
         {% endfor %}
     </ul>
 
-    <a href="{% url 'new-topic' %}">Adicionar novos Tópicos</a>
-
-{%endblock content%}
+    <h3>
+        <a href="{% url 'new-topic' %}">Adicionar novos Tópicos</a>
+    </h3>
+{% endblock content %}
