--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -20,9 +20,14 @@
                 display:none;
             }
 
-            .helptext
+            .help-block
             {
                 display:none;
+            }
+
+            .aviso-erro
+            {
+                color:red;
             }
         </style>
     </head>
