--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,11 +1,25 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+    <h1>Criar conta</h1>
+{% endblock header %}
 
 {% block content %}
 
-    <form action="{% url 'register' %}" method="post" class="ul-none">
+    {% if form.errors %}
+        <p class="aviso-erro">* O nome do usuário não deve conter caracteres especiais.</p>
+        <p class="aviso-erro">* A senha deve ter mais de 8 dígitos, letras, números, caracteres especiais e não pode conter o nome de usuário.</p>
+        <p class="aviso-erro">* As senhas digitadas precisam estar iguais.</p>
+    {% endif %}
+
+    <form action="{% url 'register' %}" method="post" class="ul-none form">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name="submit">Registrar</button>
+        {% bootstrap_form form %}
+        
+        {% buttons %}
+            <button name="submit" class="btn btn-primary">Registrar</button>
+        {% endbuttons %}
         <input type="hidden" name="next" value="{% url 'index' %}" />
     </form>
     
